# epirust

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
aws/: provision_resources.sh
benches/: compute_benchmarks.rs  simd_benchmarks.rs  survival_benchmarks.rs
epirust/: advanced_stats.py  datasets.py  pipeline_config.py
examples/: dag_analysis.ipynb  diagnostic_stats.ipynb  high_performance.ipynb  high_performance_computing.ipynb  propensity_matching.ipynb  simd_operations.ipynb  survival_analysis.ipynb
python/epirust/: __init__.py
src/: lib.rs
src/bindings/: python.rs
src/compute/: mod.rs  simd.rs
src/compute/simd/: mod.rs
src/compute/survival/: kaplan_meier.rs
src/datasets/: mod.rs
src/memory/: mod.rs
src/parallel/: mod.rs
src/stats/: mod.rs
tests/: dataset_tests.rs
tests/notebooks/: conftest.py  test_notebooks.py  utils.py
