[package]
name = "epirust"
version = "0.1.0"
edition = "2021"
authors = ["Rob Ford <you@example.com>"]
license = "MIT"
description = "High-performance epidemiology toolkit inspired by R's epiR"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
statrs = "0.16"
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"