[package]
name = "epirust"
version = "0.1.0"
edition = "2021"
authors = ["Rob Ford <you@example.com>"]
license = "MIT"
description = "High-performance epidemiology toolkit inspired by R's epiR"

[lib]
name = "epirust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
statrs = "0.16"
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
csv = "1.2"
anyhow = "1.0"
thiserror = "1.0"
num_cpus = "1.15"
rayon = "1.7"
ndarray = { version = "0.15", features = ["rayon"] }
rand = "0.8"
rand_distr = "0.4"
polars = { version = "0.34", features = ["lazy", "random", "dtype-full"] }
core_affinity = "0.5.10"
dashmap = "5.5"
bumpalo = "3.14"

[dev-dependencies]
criterion = "0.5"
proptest = "1.3"
test-case = "3.3"
tempfile = "3.8"
mockall = "0.12"
rand = "0.8"

[[bench]]
name = "compute_benchmarks"
harness = false

[[bench]]
name = "simd_benchmarks"
harness = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]